# eRoole

./: .gitignore  CMakeLists.txt  README.md
config/: prometheus.yaml  promtail_config.yaml  roole_alerts.yaml  router.ini  worker_100.ini  worker_200.ini
include/roole/cluster/: cluster_types.h  cluster_view.h  membership.h
include/roole/config/: config.h  config_validator.h
include/roole/core/: common.h  config.h  config_validator.h  event_bus.h  logger.h  metrics_server.h  service_registry.h
include/roole/dag/: dag.h
include/roole/datastore/: datastore.h
include/roole/gossip/: gossip_engine.h  gossip_protocol.h  gossip_types.h  update_queue.h
include/roole/metrics/: metrics.h  metrics_server.h
include/roole/node/: execution_tracker.h  message_queue.h  node_bootstrap.h  node_capabilities.h  node_executor.h  node_handlers.h  node_metrics.h  node_rcp.h  node_rpc.h  node_state.h  peer_pool.h
include/roole/raft/: raft_datastore.h  raft_rpc.h  raft_state.h  raft_types.h
include/roole/rpc/: rpc_channel.h  rpc_client.h  rpc_handler.h  rpc_server.h  rpc_types.h
include/roole/transport/: tcp_transport.h  transport.h  udp_transport.h
src/cluster/: cluster_view.c  membership.c
src/config/: config.c  config_validator.c
src/core/: common.c  config.c  config_validator.c  event_bus.c  logger.c  metrics.c  metrics_server.c  service_registry.c
src/dag/: dag_catalog.c  dag_executor.c  dag_serialization.c  dag_validator.c  deg_serialization.c
src/datastore/: datastore.c  datastore_serialization.c
src/gossip/engine/: gossip_engine.c  listener_loop.c  protocol_loop.c
src/gossip/membership/: member_registry.c  update_queue.c
src/gossip/protocol/: failure_detector.c  gossip_serialization.c  message_handlers.c  swim_state.c
src/logger/: logger.c
src/metrics/: metrics.c  metrics_server.c
src/node/: node_capabilities.c  node_main.c  node_metrics.c  node_rpc.c
src/node/execution/: execution_tracker.c  message_queue.c  node_executor.c
src/node/handlers/: client_handlers.c  datastore_handlers.c  handler_registry.c  peer_handlers.c  raft_datastore_handlers.c
src/node/peers/: peer_pool.c
src/node/state/: node_bootstrap.c  node_lifecycle.c  node_state.c
src/raft/core/: raft_state.c
src/raft/datastore/: raft_datastore.c
src/raft/rpc/: raft_client.c  raft_handlers.c  raft_serialization.c
src/rpc/client/: connection_pool.c  rpc_client.c
src/rpc/core/: async_context.c  handler_registry.c  rpc_channel.c  rpc_serialization.c
src/rpc/server/: connection.c  event_loop.c  handler_dispatch.c  rpc_server.c
src/transport/: tcp_transport.c  transport_base.c  udp_transport.c
test/integration/: test_gossip_protocol.c  test_rpc_complete.c
test/mocks/: mock_transport.h  test_helper.h
test/scripts/: cli.sh
test/tools/: dag_register.c  datastore_client.c
test/unit/gossip/: test_failure_detector.c  test_gossip_serialization.c  test_message_handlers.c  test_swim_state.c
test/unit/rpc/: test_rpc_complete.c  test_rpc_handler.c  test_rpc_serialization.c
test/unit/transport/: test_tcp_transport.c  test_udp_transport.c
